Delete from url

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,1 @@
-eureka.client.serviceUrl.defaultZone=https://user:quiz@quiz-code-cool-registry.herokuapp.com/eureka 
+eureka.client.serviceUrl.defaultZone=https://quiz-code-cool-registry.herokuapp.com/eureka
